minor alignment issues in header

--- a/style.css
+++ b/style.css
@@ -9,20 +9,22 @@ header {
 }
 
 header h1 {
+  display: flex;
+  justify-content: center;
   font-size: 50px;
-  text-align: center;
   margin: 0px;
 }
 
 header nav {
   display: flex;
   justify-content: center;
+  padding-left: 0;
 }
 
 header nav ul {
   display: flex; 
   list-style: none;
-  padding-left: 0; /* removes default ul padding */
+   /* removes default ul padding */
 }
 
 header nav ul li { 
@@ -41,7 +43,7 @@ header nav ul li:last-child {
   margin-right: 0
 }
 
-@media all and (min-width: 800px) {
+@media all and (min-width: 820px) {
   header {
     display: flex;
     justify-content: space-between;
@@ -106,6 +108,7 @@ h1 {
 
 h2{
   padding-left: 5%;
+  font-size: 24px
 }
 
 p {
@@ -132,6 +135,10 @@ p {
     padding: 0 5%
   }
 
+  main h2{
+    font-size: 28px;
+  }
+
   main p{
     font-size: 18px
   }
@@ -151,8 +158,8 @@ p {
     padding: 0 7.5%
   }
 
-  h2 {
-    font-size: 24px
+  main h2 {
+    font-size: 32px
   }
 
   main p {
@@ -178,7 +185,7 @@ p {
   }
 
   main h2 {
-      font-size: 28px
+      font-size: 32px
   }
 
   main p {
@@ -196,7 +203,7 @@ p {
   }
 
   main h2 {
-    32px
+    font-size: 36px
   }
 
   main p {
@@ -208,8 +215,9 @@ p {
 
 /* BEGIN FOOTER */
 
-footer h4 {
+footer h2 {
   color: black;
+  text-align: center;
 }
 
 footer p {
